# MINI_SPD

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
include/: BmnSiliconDigit.h  DataTaking.h  QA.h
src/: BmnSiliconDigit.cxx  DataTaking.cpp  QA.cpp
